# basedpyright-as-pyright

./: .copier-answers.yml  CLAUDE.md  README.md  package.json  pyproject.toml
.claude/: todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/adr/: 0001-redirect-pyright-engine-to-a-fork.md
src/: basedpyright_as_pyright.pth
src/basedpyright_as_pyright/: __init__.py
tests/: conftest.py  test_install.py  test_redirect.py
