[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basedpyright-as-pyright"
version = "0.1.0"
description = "Redirect the pyright engine to basedpyright, gated by the PYRIGHT env var."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pyright",      # (W) the wrapper whose engine seam we patch
  "basedpyright", # (B) the fork engine we redirect to
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "copier>=9.4.1",
  "hypothesis>=6.139.1",
  "isort>=5.13.2",
  "pre-commit>=4.3.0",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "pytest-pyright>=0.0.6", # template pinned >=0.0.7, which does not exist on PyPI
  "pyupgrade>=3.19.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules"
python_classes = ["Describe*", "When*", "Test*"]
python_functions = ["it_*", "test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src/basedpyright_as_pyright"]

# Land the startup hook at the site-packages root so site.py runs it, and so it
# is recorded in RECORD (hence removed by `pip uninstall`).
[tool.hatch.build.targets.wheel.force-include]
"src/basedpyright_as_pyright.pth" = "basedpyright_as_pyright.pth"

[tool.pyright]
typeCheckingMode = "strict"
analyzeUnannotatedFunctions = true
reportIncompatibleMethodOverride = "error"
pythonVersion = "3.13"
enableTypeIgnoreComments = true
reportPrivateUsage = "warning"
reportConstantRedefinition = "error"
reportIncompatibleVariableOverride = "error"
reportMissingImports = "error"
reportMissingTypeStubs = false
exclude = [".venv", "__pycache__", "node_modules", "trash", "typesafety"]
